수정 및 메일 추가

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,1 +1,8 @@
-
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=daekwang1026
+spring.mail.password=iccxhvxyoarneaks
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.from=daekwang1026@gmail.com
