--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,12 @@ group = 'kr.co.test'
 version = '0.1'
 sourceCompatibility = '1.8'
 
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+
 repositories {
 	mavenCentral()
 }
@@ -41,13 +47,19 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web-services
 	implementation 'org.springframework.boot:spring-boot-starter-web-services:2.5.3'
 	
+	
 	// Gradle이 예전 버전이라 그런지 디펜더시가 안된다...
 	// 일단 프로젝트 빌드 패스에 CommonJava8 프로젝트 추가해서 사용...
-	// 플젝도 아니고, 개인 참고용이니 대충 쓴다.
+	// 플젝도 아니고, 개인 참고용이니 대충 쓸려고 했는데, 실행할 때 오류 작살....이런 옘병...
 	//implementation group: 'kdk', name: 'CommonJava8', version: '0.2'
 	
 	// https://mvnrepository.com/artifact/org.projectlombok/lombok
-	compileOnly 'org.projectlombok:lombok:1.18.20'
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
 }
 
