Properties 관련 추가

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -6,3 +6,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.from=daekwang1026@gmail.com
+
+spring.profiles.active=local
