--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ repositories {
 	mavenCentral()
 }
 
+ext['junit-jupiter.version'] = '5.10.2'
+ext['junit-platform.version'] = '1.10.2'
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter'
@@ -61,6 +64,9 @@ dependencies {
 
 	// https://mvnrepository.com/artifact/org.apache.commons/commons-text
 	implementation 'org.apache.commons:commons-text:1.9'
+
+	// https://mvnrepository.com/artifact/com.github.ulisesbocchio/jasypt-spring-boot-starter
+	implementation("com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5")
 }
 
 test {
