--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=daekwang1026
-spring.mail.password=iccxhvxyoarneaks
+spring.mail.password=ENC(Xb8cPpGdbbAChqnIU2g9FSJGF/EABTxEQk0WfrxW9CY=)
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.from=daekwang1026@gmail.com
 
 spring.profiles.active=local
+
+jasypt.encryptor.password=tifHk8rhfVmG8jD0DfBjLpRQq32Mmu3E
+jasypt.encryptor.bean=jasyptStringEncryptor
