--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=daekwang1026
-spring.mail.password=ENC(Xb8cPpGdbbAChqnIU2g9FSJGF/EABTxEQk0WfrxW9CY=)
+spring.mail.password=ENC(jasypt비번)
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
