--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,7 +1,7 @@
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=daekwang1026
-spring.mail.password=ENC(jasypt비번)
+spring.mail.password=
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
